@@ -39,7 +39,7 @@
 #include "obdctl.h"
 
 #include <obd.h>          /* for struct lov_stripe_md */
-#include <linux/lustre_build_version.h>
+#include <lustre/lustre_build_version.h>
 
 #include <unistd.h>
 #include <sys/un.h>
